<resources>
    <string name="app_name">Android Assignment</string>
    <string name="main_title">Our universe</string>
    <string name="reorder_button_label">Reorder list</string>
    <string name="header_latest">Latest</string>

    <!-- Errors -->
    <string name="network_error_title">No network connection.</string>
    <string name="network_error_message">Please check your network connection\nand try again.</string>
    <string name="network_error_button_label">Network settings</string>
    <string name="api_error_title">Oops! Something went wrong.</string>
    <string name="api_error_message">Please refresh the page and try again.</string>
    <string name="api_error_button_label">Refresh</string>

    <!-- Dialog -->
    <string name="reorder_by_title_option">Reorder by title</string>
    <string name="reorder_by_date_option">Reorder by date</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="reorder_list_dialog_title">Reorder List</string>

    <!-- Picture Details -->
    <string name="additional_info1">It\'s warped.</string>
    <string name="additional_info2">Over 200 billion stars.</string>
    <string name="additional_info_3">It\'s really dusty and gassy.</string>
    <string name="additional_info_4">(big) Black hole at the center</string>
</resources>
