<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/rounded_corner_background">

            <TextView
                android:id="@+id/dialog_title"
                android:text="@string/reorder_list_dialog_title"
                android:textAppearance="@style/TextAppearance.AppTheme.HeadLine2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <RadioGroup
                android:id="@+id/sorting_order_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/reorder_by_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/reorder_by_title_option"/>

                <RadioButton
                    android:id="@+id/reorder_by_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/reorder_by_date_option"/>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apply_button"
                style="@style/ThemeOverlay.ButtonStyle"
                android:text="@string/apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="12dp"
                android:id="@+id/reset_button"
                android:textAppearance="@style/TextAppearance.AppTheme.Body"
                android:text="@string/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
        </LinearLayout>

    </FrameLayout>
</layout>