<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_baseline_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/main_title"
                android:textAppearance="@style/TextAppearance.AppTheme.Headline3"
                app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
                app:layout_constraintStart_toEndOf="@+id/back_arrow"
                app:layout_constraintTop_toTopOf="@+id/back_arrow" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp">
                    <TextView

                        android:id="@+id/picture_title"
                        android:textAppearance="@style/TextAppearance.AppTheme.Headline1"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="The Milky Way"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/picture_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:textAppearance="@style/TextAppearance.AppTheme.Body"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/picture_title"
                        tools:text="03/01/2022" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/ic_favorite_border"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/picture_title" />

                    <TextView
                        android:id="@+id/picture_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textSize="12sp"
                        android:lineSpacingExtra="2dp"
                        android:textAppearance="@style/TextAppearance.AppTheme.Body"
                        app:layout_constraintTop_toBottomOf="@+id/picture_date"
                        tools:layout_editor_absoluteX="24dp"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />

                    <ImageView
                        android:id="@+id/additional_info_1_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_warped"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/picture_description" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/additional_info1"
                        android:textAppearance="@style/TextAppearance.AppTheme.Body"
                        app:layout_constraintBottom_toBottomOf="@+id/additional_info_1_icon"
                        app:layout_constraintStart_toEndOf="@+id/additional_info_1_icon"
                        app:layout_constraintTop_toTopOf="@+id/additional_info_1_icon" />

                    <ImageView
                        android:id="@+id/additional_info_2_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_stars"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/additional_info_1_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/additional_info2"
                        android:textAppearance="@style/TextAppearance.AppTheme.Body"
                        app:layout_constraintBottom_toBottomOf="@+id/additional_info_2_icon"
                        app:layout_constraintStart_toEndOf="@+id/additional_info_2_icon"
                        app:layout_constraintTop_toTopOf="@+id/additional_info_2_icon" />

                    <ImageView
                        android:id="@+id/additional_info_3_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_dust"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/additional_info_2_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/additional_info_3"
                        android:textAppearance="@style/TextAppearance.AppTheme.Body"
                        app:layout_constraintBottom_toBottomOf="@+id/additional_info_3_icon"
                        app:layout_constraintStart_toEndOf="@+id/additional_info_3_icon"
                        app:layout_constraintTop_toTopOf="@+id/additional_info_3_icon" />

                    <ImageView
                        android:id="@+id/additional_info_4_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_blackhole"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/additional_info_3_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/additional_info_4"
                        android:textAppearance="@style/TextAppearance.AppTheme.Body"
                        app:layout_constraintBottom_toBottomOf="@+id/additional_info_4_icon"
                        app:layout_constraintStart_toEndOf="@+id/additional_info_4_icon"
                        app:layout_constraintTop_toTopOf="@+id/additional_info_4_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/error_layout"
            layout="@layout/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{error != ErrorType.NO_ERROR ? View.VISIBLE : View.GONE }"
            app:errorType="@{error}"
            tools:visibility="gone" />
    </FrameLayout>

    <data>
        <import type="android.view.View" />

        <import type="com.adyen.android.assignment.ui.ErrorType" />

        <variable
            name="error"
            type="com.adyen.android.assignment.ui.ErrorType" />
    </data>
</layout>